Fix invisible explosion at beginning

--- a/main.css
+++ b/main.css
@@ -13,11 +13,10 @@ body {
   font-family: Quicksand,sans-serif;
   font-weight: 800;
     color: lightgray;
-    font-size: 3vh;
     background-color: rgba(10, 10, 10, 0.8);
     border-radius: 4%;
     padding: 10px 10px;
-    transition: all 1.5s ease;
+    transition: all .7s ease;
     opacity: 1;
     z-index: 10;
     position: absolute;
